Issue #20214: Fixed a number of small issues and documentation errors in Argument Clinic (see issue for details).